--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -17,6 +17,11 @@
     margin-right: 16px;
     border-radius: 0;
 
+		&:hover {
+			color: #fff;
+			text-decoration: none;
+		}
+
 		&.activated {
 			color: #FFFFFF;
 			border-bottom: 3px solid #FFFFFF;
