--- a/src/app/main/students/students-list/students-list.component.html
+++ b/src/app/main/students/students-list/students-list.component.html
@@ -8,7 +8,7 @@
 	</div>
 </div>
 
-<div class="example-container mat-elevation-z8" style='margin: 32px 0;'>
+<div class="example-container mat-elevation-z8" style='margin: 32px 0; border-radius: 15px;'>
 	<div class="example-loading-shade" *ngIf="loading">
 		<mat-spinner></mat-spinner>
 	</div>
@@ -58,6 +58,14 @@
 				</mat-cell>
 			</ng-container>
 
+			<ng-container matColumnDef="icon">
+				<mat-header-cell *matHeaderCellDef class='centered-text no-padding-right'> Ações </mat-header-cell>
+				<mat-cell *matCellDef="let student" class='centered-text no-padding-right'>
+					<button mat-stroked-button (click)='editStudent(student)' class='edit-icon icons-table'><mat-icon>edit</mat-icon></button>
+					<button mat-stroked-button (click)='deleteStudent(student)' class='edit-icon icons-table'><mat-icon>delete</mat-icon></button>
+				</mat-cell>
+			</ng-container>
+
 			<mat-header-row *matHeaderRowDef="displayedColumns;"></mat-header-row>
 			<mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 		</mat-table>
@@ -65,6 +73,5 @@
 		<div *ngIf="dataSource.filteredData?.length === 0" class='no-content'>
 			<p>No matches found.</p>
 		</div>
-		<!-- <mat-paginator [hidden]="dataSource.filteredData?.length == 0" [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons></mat-paginator> -->
 	</div>
 </div>
