--- a/src/app/main/students/students-list/students-list.component.scss
+++ b/src/app/main/students/students-list/students-list.component.scss
@@ -20,6 +20,18 @@
   // max-height: calc(100vh - 300px);
 }
 
+.edit-icon {
+  margin-right: 16px;
+
+	&:last-child {
+		margin: 0;
+	}
+}
+
+.no-padding-right {
+	padding-right: 0;
+}
+
 .example-loading-shade {
   position: absolute;
   top: 0;
