--- a/src/app/shared/components/turma-select/turma-select.component.html
+++ b/src/app/shared/components/turma-select/turma-select.component.html
@@ -1,9 +1,9 @@
-<mat-form-field>
-  <mat-label *ngIf="label">{{ label }}</mat-label>
-  <mat-select [formControl]="formControl">
-    <mat-option *ngFor="let turma of turmas" [value]="turma">
-      {{ turma.name }}
-    </mat-option>
-  </mat-select>
-  <mat-error *ngIf="formControl.hasError('required') && errorMessage">{{ errorMessage }}</mat-error>
-</mat-form-field>
+  <mat-form-field [formGroup]="parentForm">
+    <mat-label *ngIf="label">{{ label }}</mat-label>
+    <mat-select [formControlName]="controlName">
+      <mat-option *ngFor="let turma of turmas" [value]="turma">
+        {{ turma.name }}
+      </mat-option>
+    </mat-select>
+    <mat-error *ngIf="form.hasError('required') && errorMessage">{{ errorMessage }}</mat-error>
+  </mat-form-field>
