--- a/src/app/main/class/class-list/class-list.component.html
+++ b/src/app/main/class/class-list/class-list.component.html
@@ -1,10 +1,10 @@
 <div class='page-header'>
 	<div>
-		<h2>Alunos</h2>
-		<h3>Listagem de todos alunos do curso</h3>
+		<h2>Turmas</h2>
+		<h3>Listagem de todas as turmas</h3>
 	</div>
 	<div>
-		<button mat-flat-button color="primary" class="header-button" (click)='createStudent()'>Adicionar novo aluno</button>
+		<button mat-flat-button color="primary" class="header-button" (click)='createStudent()'>Adicionar nova turma</button>
 	</div>
 </div>
 
@@ -18,47 +18,26 @@
 
 			<ng-container matColumnDef="name">
 				<mat-header-cell *matHeaderCellDef> Nome </mat-header-cell>
-				<mat-cell *matCellDef="let student">
-					{{student.nome ? student.nome : '-'}}
+				<mat-cell *matCellDef="let class">
+					Turma {{class.numero}}
 				</mat-cell>
 			</ng-container>
 
-			<ng-container matColumnDef="cpf">
-				<mat-header-cell *matHeaderCellDef class='centered-text'> CPF </mat-header-cell>
+			<ng-container matColumnDef="date">
+				<mat-header-cell *matHeaderCellDef class='centered-text'> Período vigente </mat-header-cell>
+				<mat-cell *matCellDef="let class" class='centered-text'>
+					{{class.inicioTurma | date:'dd/MM/yyyy'}} - {{class.fimTurma | date:'dd/MM/yyyy'}}
+				</mat-cell>
+			</ng-container>
+
+			<ng-container matColumnDef="numberOfStudents">
+				<mat-header-cell *matHeaderCellDef class='centered-text'> Número de alunos </mat-header-cell>
 				<mat-cell *matCellDef="let student" class='centered-text'>
-					{{student.cpf | mask: '000.000.000-00'}}
+					24
 				</mat-cell>
 			</ng-container>
 
-			<ng-container matColumnDef="years">
-				<mat-header-cell *matHeaderCellDef class='centered-text'> Idade </mat-header-cell>
-				<mat-cell *matCellDef="let student" class='centered-text'>
-					{{student.idade ? student.idade : '-'}}
-				</mat-cell>
-			</ng-container>
-
-			<ng-container matColumnDef="class">
-				<mat-header-cell *matHeaderCellDef class='centered-text'> Turma </mat-header-cell>
-				<mat-cell *matCellDef="let student" class='centered-text'>
-					{{student.turma ? student.turma : '-'}}
-				</mat-cell>
-			</ng-container>
-
-			<ng-container matColumnDef="email">
-				<mat-header-cell *matHeaderCellDef class='centered-text'> Email </mat-header-cell>
-				<mat-cell *matCellDef="let student" class='centered-text'>
-					{{student.email ? student.email : '-'}}
-				</mat-cell>
-			</ng-container>
-
-			<ng-container matColumnDef="cellphone">
-				<mat-header-cell *matHeaderCellDef class='centered-text'> Celular </mat-header-cell>
-				<mat-cell *matCellDef="let student" class='centered-text'>
-					{{student.telefoneCelular ? (student.telefoneCelular | mask: '(00) 00000-0000') : '-'}}
-				</mat-cell>
-			</ng-container>
-
-			<ng-container matColumnDef="icon">
+      <ng-container matColumnDef="icon">
 				<mat-header-cell *matHeaderCellDef class='centered-text no-padding-right'> Ações </mat-header-cell>
 				<mat-cell *matCellDef="let student" class='centered-text no-padding-right'>
 					<button mat-stroked-button (click)='editStudent(student)' class='edit-icon icons-table'><mat-icon>edit</mat-icon></button>
