--- a/src/app/main/class-frequency/class-students-list/class-students-list.component.html
+++ b/src/app/main/class-frequency/class-students-list/class-students-list.component.html
@@ -3,6 +3,8 @@
 		<p class="input-label">Turma:</p>
 		<app-turma-select
 			label=""
+			[parentForm]="headerForm"
+			controlName="turma"
 		></app-turma-select>
 	</div>
 	<div class="input data-input">
@@ -18,26 +20,44 @@
 		<mat-spinner></mat-spinner>
 	</div>
 
-	<div class="example-table-container" >
-		<!-- <mat-table [dataSource]="dataSource" class="table-teams" [hidden]="dataSource.length == 0"> -->
+	<div class="example-table-container">
+		<mat-table [dataSource]="dataSource" class="table-teams" [hidden]="dataSource.length == 0">
 
-			<!-- <ng-container matColumnDef="name">
-				<mat-header-cell *matHeaderCellDef> Nome </mat-header-cell>
+			<ng-container matColumnDef="icon">
+				<mat-header-cell *matHeaderCellDef></mat-header-cell>
+				<mat-cell *matCellDef="let student" class="checkboxes-container">
+					<mat-checkbox
+						#firstCheckbox
+						class="first-checkbox"
+						(change)="onCheckboxChecked(student, $event.checked, 1)"
+					></mat-checkbox>
+					<mat-checkbox
+						#secondCheckbox
+						(change)="onCheckboxChecked(student, $event.checked, 2)"
+					></mat-checkbox>
+				</mat-cell>
+			</ng-container>
+
+			<ng-container matColumnDef="name">
+				<mat-header-cell *matHeaderCellDef>Nome</mat-header-cell>
 				<mat-cell *matCellDef="let student">
 					{{student.nome ? student.nome : '-'}}
 				</mat-cell>
-			</ng-container> -->
+			</ng-container>
 
-			<!-- <ng-container matColumnDef="icon">
+			<!-- <ng-container matColumnDef="">
 				<mat-header-cell *matHeaderCellDef class='centered-text no-padding-right'> Ações </mat-header-cell>
 				<mat-cell *matCellDef="let student" class='centered-text no-padding-right'>
 					<button mat-stroked-button (click)='editStudent(student)' class='edit-icon icons-table'><mat-icon>edit</mat-icon></button>
 					<button mat-stroked-button (click)='deleteStudent(student)' class='edit-icon icons-table'><mat-icon>delete</mat-icon></button>
 				</mat-cell>
-			</ng-container>
+			</ng-container> -->
 
 			<mat-header-row *matHeaderRowDef="displayedColumns;"></mat-header-row>
-			<mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row> -->
-		<!-- </mat-table> -->
+			<mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+		</mat-table>
 	</div>
+</div>
+<div class="container-bttns">
+	<button mat-stroked-button (click)='registrarPresencas()' class='' tooltip="Registrar presença" [disabled]="disableRegistrar">Registrar</button>
 </div>
