--- a/src/app/main/class-frequency/class-students-list/class-students-list.component.html
+++ b/src/app/main/class-frequency/class-students-list/class-students-list.component.html
@@ -11,6 +11,8 @@
 		<p class="input-label">Data:</p>
 		<app-turma-select
 			label=""
+			[parentForm]="headerForm"
+			controlName="data"
 		></app-turma-select>
 	</div>
 </div>
