--- a/src/app/main/class/class-list/class-list.component.html
+++ b/src/app/main/class/class-list/class-list.component.html
@@ -16,6 +16,14 @@
 	<div class="example-table-container" >
 		<mat-table [dataSource]="dataSource" class="table-teams" [hidden]="dataSource.filteredData?.length == 0">
 
+			<ng-container matColumnDef="icon">
+				<mat-header-cell *matHeaderCellDef> Ações </mat-header-cell>
+				<mat-cell *matCellDef="let student">
+					<button mat-stroked-button (click)='editStudent(student)' class='edit-icon icons-table'><mat-icon>edit</mat-icon></button>
+					<button mat-stroked-button (click)='deleteStudent(student)' class='edit-icon icons-table'><mat-icon>delete</mat-icon></button>
+				</mat-cell>
+			</ng-container>
+			
 			<ng-container matColumnDef="name">
 				<mat-header-cell *matHeaderCellDef> Nome </mat-header-cell>
 				<mat-cell *matCellDef="let class">
@@ -31,17 +39,9 @@
 			</ng-container>
 
 			<ng-container matColumnDef="numberOfStudents">
-				<mat-header-cell *matHeaderCellDef class='centered-text'> Número de alunos </mat-header-cell>
-				<mat-cell *matCellDef="let student" class='centered-text'>
-					24
-				</mat-cell>
-			</ng-container>
-
-      <ng-container matColumnDef="icon">
-				<mat-header-cell *matHeaderCellDef class='centered-text no-padding-right'> Ações </mat-header-cell>
+				<mat-header-cell *matHeaderCellDef class='centered-text no-padding-right'> Número de alunos </mat-header-cell>
 				<mat-cell *matCellDef="let student" class='centered-text no-padding-right'>
-					<button mat-stroked-button (click)='editStudent(student)' class='edit-icon icons-table'><mat-icon>edit</mat-icon></button>
-					<button mat-stroked-button (click)='deleteStudent(student)' class='edit-icon icons-table'><mat-icon>delete</mat-icon></button>
+					24
 				</mat-cell>
 			</ng-container>
 
