--- a/src/app/main/class-frequency/class-students-list/class-students-list.component.html
+++ b/src/app/main/class-frequency/class-students-list/class-students-list.component.html
@@ -9,11 +9,12 @@
 	</div>
 	<div class="input data-input">
 		<p class="input-label">Data:</p>
-		<app-turma-select
-			label=""
-			[parentForm]="headerForm"
-			controlName="data"
-		></app-turma-select>
+		<mat-form-field>
+			<mat-label>Choose a date</mat-label>
+			<input matInput [matDatepicker]="picker" controlName="data">
+			<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+			<mat-datepicker #picker></mat-datepicker>
+		</mat-form-field>
 	</div>
 </div>
 
