--- a/src/app/main/students/students-list/students-list.component.scss
+++ b/src/app/main/students/students-list/students-list.component.scss
@@ -22,10 +22,17 @@
 
 .edit-icon {
   margin-right: 16px;
+	min-width: 50px !important;
 
 	&:last-child {
 		margin: 0;
 	}
+}
+
+mat-icon {
+	height: 18px;
+	font-size: 18px;
+	width: 18px;
 }
 
 .no-padding-right {
@@ -67,7 +74,7 @@ mat-header-row {
 
 .mat-cell:first-of-type, mat-header-cell:first-of-type {
   padding-left: 0px !important;
-  min-width: 220px !important;
+	min-width: 290px !important;
 }
 
 .stats-column {
