--- a/src/app/main/students/students-list/students-list.component.html
+++ b/src/app/main/students/students-list/students-list.component.html
@@ -19,7 +19,7 @@
 			<ng-container matColumnDef="icon">
 				<mat-header-cell *matHeaderCellDef> Ações </mat-header-cell>
 				<mat-cell *matCellDef="let student">
-					<button mat-stroked-button matTooltip="Advertência" matTooltipPosition="above" (click)='studentOccurrence(student)' class='edit-icon icons-table'><mat-icon>flag</mat-icon></button>
+					<button mat-stroked-button matTooltip="Advertência" matTooltipPosition="above" (click)='studentAdvertence(student)' class='edit-icon icons-table'><mat-icon>flag</mat-icon></button>
 					<button mat-stroked-button matTooltip="Ocorrência" matTooltipPosition="above" (click)='studentOccurrence(student)' class='edit-icon icons-table'><mat-icon>warning</mat-icon></button>
 					<button mat-stroked-button matTooltip="Editar" matTooltipPosition="above" (click)='editStudent(student)' class='edit-icon icons-table'><mat-icon>edit</mat-icon></button>
 					<button mat-stroked-button matTooltip="Excluir" matTooltipPosition="above" (click)='deleteStudent(student)' class='edit-icon icons-table'><mat-icon>delete</mat-icon></button>
