--- a/src/app/main/class/class-list/class-list.component.html
+++ b/src/app/main/class/class-list/class-list.component.html
@@ -21,6 +21,7 @@
 				<mat-cell *matCellDef="let class">
 					<button mat-stroked-button (click)='editClass(class)' class='edit-icon icons-table'><mat-icon>edit</mat-icon></button>
 					<button mat-stroked-button (click)='deleteClass(class)' class='edit-icon icons-table'><mat-icon>delete</mat-icon></button>
+					<button mat-stroked-button (click)='listStudents(class)' class='edit-icon icons-table'><mat-icon>person</mat-icon></button>
 				</mat-cell>
 			</ng-container>
 			
@@ -35,13 +36,6 @@
 				<mat-header-cell *matHeaderCellDef class='centered-text'> Período vigente </mat-header-cell>
 				<mat-cell *matCellDef="let class" class='centered-text'>
 					{{class.inicioTurma | date:'dd/MM/yyyy'}} - {{class.fimTurma | date:'dd/MM/yyyy'}}
-				</mat-cell>
-			</ng-container>
-
-			<ng-container matColumnDef="numberOfStudents">
-				<mat-header-cell *matHeaderCellDef class='centered-text no-padding-right'> Número de alunos </mat-header-cell>
-				<mat-cell *matCellDef="let student" class='centered-text no-padding-right'>
-					24
 				</mat-cell>
 			</ng-container>
 
