--- a/src/app/main/class/class-list/class-list.component.html
+++ b/src/app/main/class/class-list/class-list.component.html
@@ -19,9 +19,9 @@
 			<ng-container matColumnDef="icon">
 				<mat-header-cell *matHeaderCellDef> Ações </mat-header-cell>
 				<mat-cell *matCellDef="let class">
-					<button mat-stroked-button (click)='editClass(class)' class='edit-icon icons-table'><mat-icon>edit</mat-icon></button>
-					<button mat-stroked-button (click)='deleteClass(class)' class='edit-icon icons-table'><mat-icon>delete</mat-icon></button>
-					<button mat-stroked-button (click)='listStudents(class)' class='edit-icon icons-table'><mat-icon>person</mat-icon></button>
+					<button mat-stroked-button matTooltip="Ver alunos dessa turma" matTooltipPosition="above" (click)='listStudents(class)' class='edit-icon icons-table'><mat-icon>person</mat-icon></button>
+					<button mat-stroked-button matTooltip="Editar" matTooltipPosition="above" (click)='editClass(class)' class='edit-icon icons-table'><mat-icon>edit</mat-icon></button>
+					<button mat-stroked-button matTooltip="Excluir" matTooltipPosition="above" (click)='deleteClass(class)' class='edit-icon icons-table'><mat-icon>delete</mat-icon></button>
 				</mat-cell>
 			</ng-container>
 			
