wip(*) add toasts on the system

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -39,6 +39,10 @@
   stroke: #FFF;
 }
 
+::ng-deep .mat-simple-snackbar {
+  justify-content: center !important;
+}
+
 .login-button {
   display: flex;
   justify-content: center;
