--- a/src/app/main/class/edit-create-class/edit-create-class.component.html
+++ b/src/app/main/class/edit-create-class/edit-create-class.component.html
@@ -11,7 +11,7 @@
         <div class='col-md-12'>
           <mat-form-field class="field">
             <mat-label>Número da turma</mat-label>
-            <input matInput formControlName="numero">
+            <input type='number' matInput formControlName="numero">
             <mat-error *ngIf="classForm.get('nome')?.hasError('required')">
               Nome completo é <strong>obrigatório</strong>
             </mat-error>
@@ -28,12 +28,6 @@
               Data de início é <strong>obrigatório</strong>
             </mat-error>
 					</mat-form-field>
-
-          <!-- <mat-form-field >
-            <mat-label></mat-label>
-            <input matInput  mask="00/00/0000" [dropSpecialCharacters]="false">
-            
-          </mat-form-field> -->
         </div>
         
         <div class='col-md-6'>
@@ -55,12 +49,10 @@
   </form>
 
   <div class='save-buttons dialog-footer'>
-    <div style='display: flex;'>
-      <button mat-stroked-button (click)="cancel()">Cancelar</button>
-      <button mat-flat-button color="primary" (click)="save()" *ngIf='!loadingSpinner'>{{isEditing ? 'Atualizar' : 'Criar'}}</button>
-      <button mat-flat-button color='primary' class='button-loading-spinner' *ngIf='loadingSpinner'>
-        <mat-spinner diameter='25'></mat-spinner>
-      </button>
-    </div>
+		<button mat-stroked-button (click)="cancel()">Cancelar</button>
+		<button mat-flat-button color="primary" (click)="save()" *ngIf='!loadingSpinner'>{{isEditing ? 'Atualizar' : 'Criar'}}</button>
+		<button mat-flat-button color='primary' class='button-loading-spinner' *ngIf='loadingSpinner'>
+			<mat-spinner diameter='25'></mat-spinner>
+		</button>
   </div>
 </mat-dialog-content>
