--- a/src/app/main/class/edit-create-class/edit-create-class.component.scss
+++ b/src/app/main/class/edit-create-class/edit-create-class.component.scss
@@ -27,6 +27,10 @@ strong {
   width: 100%; 
   display: flex; 
   justify-content: flex-end;
+
+	button:first-child {
+		margin-right: 16px;
+	}
 }
 
 .button-loading-spinner {
