--- a/src/app/main/documents/documents.component.html
+++ b/src/app/main/documents/documents.component.html
@@ -1,1 +1,21 @@
+<div class='page-header'>
+	<div>
+		<h2>Documentos</h2>
+		<h3>Geração de documentos do curso</h3>
+	</div>
+</div>
 
+<div class="example-container mat-elevation-z8" style='margin: 32px 0; border-radius: 15px;'>
+	
+    <mat-form-field appearance="fill" style="margin-left: 1%; margin-top: 1%; margin-bottom: 1%;">
+        <mat-label>Selecione o aluno</mat-label>
+        <mat-select [formControl]="studentControl" required>
+          <mat-option>--</mat-option>
+          <mat-option *ngFor="let Aluno of students" [value]="Aluno">
+            {{Aluno.name}}
+          </mat-option>
+        </mat-select>
+        <mat-error *ngIf="studentControl.hasError('required')">Por favor selecione um aluno</mat-error>
+        <mat-hint>{{studentControl.value?.CPF}}</mat-hint>
+    </mat-form-field>
+</div>
