--- a/src/app/main/documents/documents.component.html
+++ b/src/app/main/documents/documents.component.html
@@ -9,13 +9,11 @@
 	
     <mat-form-field appearance="fill" style="margin-left: 1%; margin-top: 1%; margin-bottom: 1%;">
         <mat-label>Selecione o aluno</mat-label>
-        <mat-select [formControl]="studentControl" required>
+        <mat-select>
           <mat-option>--</mat-option>
-          <mat-option *ngFor="let Aluno of students" [value]="Aluno">
-            {{Aluno.name}}
+          <mat-option *ngFor="let aluno of Students">
+            {{aluno.nome}}
           </mat-option>
         </mat-select>
-        <mat-error *ngIf="studentControl.hasError('required')">Por favor selecione um aluno</mat-error>
-        <mat-hint>{{studentControl.value?.CPF}}</mat-hint>
     </mat-form-field>
 </div>
