novas rotas de documentos

--- a/src/app/main/documents/enrollment-declaration/enrollment-declaration.component.html
+++ b/src/app/main/documents/enrollment-declaration/enrollment-declaration.component.html
@@ -16,6 +16,6 @@
     </p>
     <p>E, por estar de acordo com os termos e condições descritos acima, assino a presente autorização.</p>
 
-    <p>{{today}}</p>
+    <p>{{day}} de {{month}} de {{year}}</p>
          
 </div>
