--- a/src/app/main/documents/image-unisantos/image-unisantos.component.html
+++ b/src/app/main/documents/image-unisantos/image-unisantos.component.html
@@ -33,7 +33,7 @@
             <br>
         </div>
         <div class = "centralizar">
-            <h4>SANTOS {{day}} de {{month}} de {{year}}</h4>
+            <h4>Santos {{today | date:"longDate"}}</h4>
             <p>__________________________</p>
             <p>{{studentData?.nome}}<br></p>
             <br>
