--- a/src/app/main/documents/advertence/advertence.component.html
+++ b/src/app/main/documents/advertence/advertence.component.html
@@ -17,7 +17,7 @@
             <br>
             <p class="centralizar">Através deste termo, informamos que o(a) aluno(a) {{studentData?.nome}} está sendo advertido(a) pelo(s) seguinte(s) motivo(s):</p>
             <br>
-            <p  class="centralizar" *ngFor="let advertence of studentAdvertences">{{advertence?.descricao}}</p>
+            <p  class="centralizar" *ngFor="let advertence of studentAdvertences">{{advertence?.descricao}}</p> <!-- TO DO: VERIFICAR COM O ANDERSON SE ELE QUER TODAS AS ADVERTENCIAS OU NÃO -->
             <br/>
             <p class="centralizar">Esclarecemos que a reincidência em procedimentos semelhantes, 
                 poderá causar uma suspensão disciplinar ou até mesmo a exclusão deste 
