--- a/src/app/main/documents/enrollment-declaration/enrollment-declaration.component.html
+++ b/src/app/main/documents/enrollment-declaration/enrollment-declaration.component.html
@@ -15,7 +15,7 @@
         <div>
             <br>
             <p>Declaramos que {{studentData?.nome}} está em período de formação no curso 
-                de Organização em Alimentos e Bebidas do Restaurante-Escola 
+                de Organização em Alimentos e Bebidas do Restaurante-Escola <!-- TO DO: -->
                 Estação Bistrô com experiências em cozinha quente e fria, 
                 confeitaria, bar e atendimento ao cliente (salão), aulas 
                 teóricas e práticas. Iniciado em {{classData?.inicioTurma | date: "longDate"}} com previsão de 
