--- a/src/app/main/documents/conclusion/conclusion.component.html
+++ b/src/app/main/documents/conclusion/conclusion.component.html
@@ -15,7 +15,7 @@
         <div>
             <br>
             <p>Declaramos que {{studentData?.nome}}, CONCLUIU o curso de 
-                Organização em Alimentos e Bebidas do Restaurante-Escola 
+                Organização em Alimentos e Bebidas do Restaurante-Escola <!-- TO DO:  -->
                 Estação Bistrô com experiências em cozinha quente e fria, 
                 confeitaria, bar e atendimento ao cliente (salão), aulas 
                 teóricas e práticas. Iniciado em {{classData?.inicioTurma | date: "longDate"}} a {{classData?.fimTurma | date: "longDate"}} , 
